--- a/xyz.html
+++ b/xyz.html
@@ -2,7 +2,7 @@
 <html>
   <meta charset="UTF-8">
   <head>
-    coe rapeize
+    <title>coe rapeize</title>
   </head>
   <body>
     joão é <strong>burro<strong>
