--- a/xyz.html
+++ b/xyz.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     joão é <strong>burro<strong>
-    <img src="./asasasa.png">
+    <img src="../asasasa.png">
   </body>
 </html>
