--- a/xyz.html
+++ b/xyz.html
@@ -2,10 +2,14 @@
 <html>
   <meta charset="UTF-8">
   <head>
+    <style> 
+      body{background-image: url('cookie.jpg');}
+    </style>
     <title>coe rapeize</title>
   </head>
   <body>
     joão é <strong>burro<strong>
     <img src="../asasasa.png">
+    <  
   </body>
 </html>
