--- a/xyz.html
+++ b/xyz.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <head>
     <style> 
-      body{background-image: url('cookie.jpg');}
+      body{background-image: url(cookie.jpg);}
     </style>
     <title>coe rapeize</title>
   </head>
