--- a/xyz.html
+++ b/xyz.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     joão é <strong>burro<strong>
-    <img src="../asasasa.png">
-    <  
+    <br><img src="../asasasa.png"></br> 
   </body>
 </html>
